package DIP.exercice;

public interface IDatabase {
    public int write(String inputString) ;
}
