package DIP.exercice;

import java.io.IOException;

public interface IFileEncoding {
    public void encodeWithFiles() throws IOException ;
}
