package DIP.exercice;

import java.io.IOException;

public interface INetworkDBEncoding {
    public void encodeBasedOnNetworkAndDatabase() throws IOException ;
}
